test/fail/import/import_within_function.lly
#[
SyntaxError: Cannot import a file here.
    from import_within_function.lly:7
]#

define f() {
    import empty.lly
}
